# slskr

./: .gitattributes  .gitignore  .gitlab-ci.yml  AGENTS.md  ANALYSIS_README.txt  API_ENDPOINTS_IMPLEMENTED.md  COMPLIANCE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  ENDPOINT_IMPLEMENTATION_CHECKLIST.md  EXACT_CODE_TO_ADD.md  EXTENDED_SESSION_SUMMARY.md  FINAL_500K_IMPLEMENTATION.md  FINAL_COMPLETION_REPORT.md  FINAL_SESSION_REPORT.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.txt  LOAD_TESTING_GUIDE.md  MIGRATION_v1.0_to_v1.1.md  MONITORING_OBSERVABILITY.md  NOTICE  PERFORMANCE_BENCHMARK.md  PHASE8_COMPLETION.md  PHASE8_COMPLETION_SUMMARY.md  PHASE_10_SUMMARY.md  PHASE_12_FINAL_REPORT.md  PLAN.md  POST_ENDPOINTS_QUICK_REF.md  PROJECT_STATUS.md  QUICK_START.md  REACT_AND_NAMING_UPDATES.md  REACT_CLEANUP_COMPLETE.md  README.md  REFACTORING.md  RELEASE_v1.0.1.md  REMAINING_IMPLEMENTATION_PLAN.md  REMEDIATION.md  ROADMAP_v1.1.0.md  SECURITY_AUDIT.md  (+5 more)
.cargo/: config.toml
.council/: active-bughunt.md  latest-candidate-counts.md
.github/: WINDOWS_RUNNER.md  actionlint.yaml  dependabot.yml
archive/: API_ENDPOINTS_IMPLEMENTED.md  API_INDEX.md  API_VERSIONING.md  CODE_PATTERNS_ANALYSIS.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_COMPLETION_SUMMARY.md  EXTENDED_SESSION_SUMMARY.md  FINAL_COMPLETION_REPORT.md  FINAL_DELIVERABLES.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_PROJECT_COMPLETION.md  FINAL_SESSION_REPORT.md  FINAL_SUMMARY.md  FUNCTION_SIGNATURES_REFERENCE.md  HTTP_API_GAPS.md  HTTP_API_SUMMARY.md  IMPLEMENTATION_STATUS.md  MONITORING.md  PERFORMANCE_OPTIMIZATION_TARGETS.md  PHASE4_FINAL_REPORT.md  PHASE8_COMPLETION.md  PHASE8_COMPLETION_SUMMARY.md  PHASE_10_SUMMARY.md  PHASE_12_COMPLETE.md  PHASE_12_FINAL_REPORT.md  PHASE_12_FINAL_SUMMARY.md  PHASE_12_RELEASE.md  POST_DELETE_TEST_REQUIREMENTS.md  PROJECT_STATUS.md  QUICK_START.md  QUICK_START_PHASE8.md  RATE_LIMITING.md  REACT_AND_NAMING_UPDATES.md  REACT_CLEANUP_COMPLETE.md  REACT_FIXES_AUDIT.md  RELEASE_CANDIDATE.md  RELEASE_v1.0.1.md  (+4 more)
benchmarks/: benchmark.rs
client-go/: README.md  batch.go  batch_test.go  client.go  client_test.go  go.mod  websocket.go  websocket_test.go
client-python/: README.md  setup.py
client-ts/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
crates/slskr/: Cargo.toml  build.rs
crates/slskr-cli/: Cargo.toml
crates/slskr-cli/src/: admin_cli.rs  lib.rs  main.rs
crates/slskr-client/: Cargo.toml
crates/slskr-client/src/: capabilities.rs  connection.rs  distributed_tree.rs  error.rs  events.rs  file_transfer.rs  filters.rs  io.rs  lib.rs  listener.rs  manager.rs  mesh.rs  overlay.rs  peer_cache.rs  peer_connect.rs  search.rs  server.rs  share_payload.rs  social.rs  stream.rs  transfer.rs  version.rs
crates/slskr-client/tests/: distributed_tree.rs  file_transfer.rs  io.rs  listener.rs  manager.rs  mesh.rs  peer_cache.rs  peer_connect.rs  phase7.rs  search.rs  server_session.rs  soulfind_contract.rs  stream.rs  transfer.rs  version.rs
crates/slskr-protocol/: Cargo.toml
crates/slskr-protocol/src/: distributed.rs  error.rs  frame.rs  init.rs  lib.rs  obfuscation.rs  peer.rs  primitives.rs  server.rs
crates/slskr-protocol/tests/: adversarial.rs  distributed.rs  frames.rs  init.rs  obfuscation.rs  peer.rs  primitives.rs  server.rs
crates/slskr-web/: Cargo.toml  README.md
crates/slskr-web/src/: lib.rs
crates/slskr-web/static/: index.html  slskr_web_bootstrap.js  styles.css
crates/slskr/data/: slskd-controller-auth-policy.json  slskd-options-default.json  slskdn-controller-auth-policy.json  slskdn-options-default.json
crates/slskr/src/: api_integration.rs  api_keys.rs  axum_router.rs  batch.rs  benchmarks.rs  caching.rs  cli.rs  cluster.rs  compression.rs  config.rs  content_discovery.rs  credential_store.rs  dht.rs  docs.rs  dotnet_regex.rs  enrichment.rs  events_ws.rs  filters.rs  ftp.rs  graphql.rs  grpc_api.rs  http2_multiplexing.rs  http_server.rs  logging.rs  main.rs  mesh_dht.rs  mesh_services.rs  metrics.rs  middleware.rs  multisource.rs  observability.rs  openapi.json  openapi.rs  pagination.rs  persistence.rs  pod_channels.rs  pods.rs  port_forwarding.rs  postgres_replicas.rs  private_gateway.rs  (+21 more)
crates/slskr/tests/: api_smoke.rs  integration_tests.rs
dashboard/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: CLIENT_LIBRARIES.md  ENHANCEMENTS.md  GRAPHQL_SCHEMA.graphql  INTEGRATION_GUIDE.md  README.md  WEBHOOK_API.md  app-surface.md  credential-storage.md  full-network-test-plan.md  http-api-deployment.md  http-api-features.md  http-api.md  install.md  legacy-port-harvest.md  live-interop-test-matrix.md  open-commons-fixtures.md  openapi.json  performance-analysis.md  release.md  rust-ui-parity-ledger.md  rust-web-ui.md  security-bug-burndown.md  slskr.config.example.toml  vpn-certification.md  webui-endpoints.txt  webui-port-plan.md
examples/: README.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  prometheus-rules.yaml  prometheus-values.yaml  pvc.yaml  rbac.yaml  secrets.example.yaml  service.yaml  servicemonitor.yaml
scripts/: audit-parity-manifest.py  audit-rust-web-ui.mjs  audit-slskdn-controller-routes.mjs  audit-slskdn-openapi-mutations.mjs  audit-upstream-config-surface.py  audit-upstream-webui-endpoints.mjs  build-release-archive.sh  build-rust-web.sh  check-audit-tooling.sh  check-browser-token-persistence.sh  check-bug-council-all-phases.sh  check-client-sdk-gates.sh  check-compatibility-noop-documentation.sh  check-controller-auth-profiles.sh  check-controller-options-differential.sh  check-council-active-backlog.sh  check-council-inventory-closure.sh  check-council-loop.sh  check-council-negative-space.sh  check-council-sweep-counts.sh  check-csp-policy.sh  check-dev-tooling.sh  check-diagnostics-memory-dump-differential.sh  check-docs-freshness.sh  check-endpoint-parity-drift.sh  check-kubernetes-public-posture.sh  (+69 more)
(+451 files in other folders)
