[workspace]
members = [
    "crates/slskr",
    "crates/slskr-client",
    "crates/slskr-protocol",
    "crates/slskr-web",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3.0-only"
homepage = "https://github.com/snapetech/slskr"
repository = "https://github.com/snapetech/slskr"
rust-version = "1.76"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
