[package]
name = "slskr-cli"
version = "0.0.0"
description = "Internal command runner for slskr smoke tests and interop probes"
keywords = ["slsk", "soulseek", "cli", "testing", "rust"]
categories = ["command-line-utilities", "network-programming"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
slskr-client = { version = "0.0.0", path = "../slskr-client" }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }

[lints]
workspace = true
