[package]
name = "slskr-client"
version = "0.0.0"
description = "Async Rust client orchestration for the Soulseek peer-to-peer protocol"
keywords = ["slsk", "soulseek", "client", "p2p", "rust"]
categories = ["network-programming", "asynchronous"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64 = "0.22"
ed25519-dalek = "3"
flate2 = "1"
md5 = "0.8"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
slskr-protocol = { version = "0.0.0", path = "../slskr-protocol" }
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
tracing = "0.1"

[dev-dependencies]
rcgen = { version = "0.14", default-features = false, features = ["crypto", "ring"] }

[lints]
workspace = true
