[package]
name = "slskr-web"
version = "0.0.0"
description = "Rust WASM web UI migration target for slskr"
keywords = ["slsk", "soulseek", "web", "wasm", "rust"]
categories = ["wasm", "web-programming"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rustymilk-core = { version = "0.1.0", git = "https://github.com/snapetech/RustyMilk", branch = "main" }
rustymilk-wasm = { version = "0.1.0", git = "https://github.com/snapetech/RustyMilk", branch = "main" }
serde_json = "1"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "AnalyserNode",
    "AudioContext",
    "AudioDestinationNode",
    "AudioNode",
    "BaseAudioContext",
    "Blob",
    "BlobPropertyBag",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FileReader",
    "History",
    "Headers",
    "HtmlElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "HtmlAnchorElement",
    "HtmlAudioElement",
    "HtmlCanvasElement",
    "HtmlMediaElement",
    "KeyboardEvent",
    "Location",
    "MediaElementAudioSourceNode",
    "MouseEvent",
    "Node",
    "NodeList",
    "RequestInit",
    "Response",
    "Storage",
    "Url",
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlFramebuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
    "Window",
] }

[lints]
workspace = true
