[package]
name = "slskr"
version = "0.0.0"
description = "Bundled Soulseek-network client/server app"
keywords = ["slsk", "soulseek", "client", "server", "rust"]
categories = ["command-line-utilities", "network-programming"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slskr-client = { version = "0.0.0", path = "../slskr-client" }
slskr-cli = { version = "0.0.0", path = "../slskr-cli" }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time", "signal"] }
toml = "0.8"
sqlx-core = { version = "0.8", default-features = false, features = ["_rt-tokio", "chrono", "uuid"] }
sqlx-sqlite = { version = "0.8", default-features = false, features = ["bundled", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio-tungstenite = "0.21"
base64 = "0.22"

[dev-dependencies]
futures-util = "0.3"

[lints]
workspace = true
