[package]
name = "slskr"
version = "0.0.0"
description = "Self-hosted Rust app for the Soulseek network with daemon, web UI, HTTP API, transfers, search, and observability"
keywords = ["slsk", "soulseek", "client", "server", "rust"]
categories = ["command-line-utilities", "network-programming"]
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
slskr-client = { version = "0.0.0", path = "../slskr-client" }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time", "signal"] }
toml = "1.1"
sqlx-core = { version = "0.9", default-features = false, features = ["_rt-tokio", "chrono", "uuid"] }
sqlx-sqlite = { version = "0.9", default-features = false, features = ["bundled", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
rand = "0.10"
ring = "0.17"
fancy-regex = "0.18"
rcgen = { version = "0.14", default-features = false, features = ["crypto", "ring"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio-tungstenite = "0.29"
base64 = "0.22"
shell-words = "1"
ed25519-dalek = "3"
keyring = { version = "3.6.3", default-features = false, features = ["apple-native", "linux-native", "windows-native"] }
libc = "0.2"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
webpki-roots = "1"
mainline = "7"
sha1 = "0.10"
socket2 = "0.6"
suppaftp = { version = "10.0.1", default-features = false, features = ["tokio-rustls-ring", "deprecated"] }
[target.'cfg(unix)'.dependencies]
rustix = { version = "1", features = ["fs", "process"] }

[target.'cfg(all(not(target_os = "windows"), not(target_env = "musl")))'.dependencies]
openssl = "0.10"

[target.'cfg(any(target_os = "windows", target_env = "musl"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[lints]
workspace = true
